Isolate appsettings.json

--- a/GrpcServiceProject/appsettings.json
+++ b/GrpcServiceProject/appsettings.json
@@ -5,7 +5,10 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Warning",
       "GreeterService": "Information"
-    }
+    },
+  },
+  "ConnectionStrings": {
+    "MyMariaDB": "server=localhost;user=root;password=1234567890;database=ef"
   },
   "AllowedHosts": "*",
   "Kestrel": {
